# CrazySM

./: .gitignore
Week2_Exercise4/: CMakeLists.txt  cubic_lattice.c  fcc_lattice.c  hs-nvt.c  main.c
Week2_Exercise4/Report/: code.typ  main.typ  template.typ
Week2_Exercise4/Report/figures/: fraction_cl.typ  fraction_fccl.typ
Week3_Exercise5/: CMakeLists.txt  CrazyCSV.csv  absolute-path.c  absolute-path.h  npt.c
